fix: adjust CSS to resolve layout issues

--- a/WEB/src/pages/home/media.css
+++ b/WEB/src/pages/home/media.css
@@ -1,7 +1,7 @@
 @media (max-width: 1600px) {
 
   .form-container {
-    height: 175vh;
+    height: 200vh;
    margin-bottom: 10vh;
   }
 
@@ -36,11 +36,11 @@
 @media (max-width: 1400px) {
 
   .form-container {
-    height: 170vh;
+    height: 180vh;
   }
 
   .users-container {
-    height: 165vh;
+    height: 180vh;
   }
 
   .users-list {
@@ -63,6 +63,21 @@
     font-size: clamp(0.7rem, 3vw, 1rem); 
   }
 
+}
+
+@media (max-width: 1200px) {
+  .form-container {
+    height: 200vh;
+   margin-bottom: 10vh;
+   
+  }
+}
+
+@media (max-height: 900px) {
+  .form-container {
+    height: 180vh;
+   margin-bottom: 10vh;
+  }
 }
 
 @media (max-width: 800px) { 
@@ -95,7 +110,6 @@
    padding-top: 2vh;
    padding-bottom: 2vh;
    word-wrap: break-word;
-   
   }
 
   .users-list {
@@ -108,6 +122,5 @@
   .user-button {
     gap: 2vh;
   }
-
-
 }
+
